alerts em acao.html e esporte.html

--- a/acao.html
+++ b/acao.html
@@ -176,9 +176,10 @@
                     adentra na história que ganha corpo e emerge sob um ponto de vista totalmente imprevisível, a medida
                     que os acontecimentos vão se completando. É uma obra dedicada à eterna luta do Catolicismo contra
                     Paganismo....</p>
-                <div class="alert alert-danger configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 18
+                <div class="alert alert-dark configAlert" role="alert">
+                    <button type="button" class="btn btn-dark " disabled><h6 class="display-6 fw-bold">18</h6></button> Não recomendado para menores de 18
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -196,8 +197,9 @@
                     envolver com o mundo espiritual, ele acaba no meio de uma trama que ameaça a existência de ambos os
                     mundos.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">13</h6></button> Não recomendado para menores de 13
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -215,8 +217,9 @@
                     algum. No entanto, ele não desiste de seu grande sonho e fará de todo o possível para ser o maior
                     herói que o mundo já conheceu!</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold ">12</h6></button> Não recomendado para menores de 12
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
         </div>
         <hr class="linha">
@@ -234,9 +237,10 @@
                     demônios. E então, quando o Denji acaba sendo morto por um demônio, o Pochita desiste de sua vida
                     para revivê-lo. Mas, agora o Denji renasceu como um hibrido de demônio com humano... Agora ele é o
                     "Chainsaw Man"!!!</p>
-                <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                <div class="alert alert-danger configAlert" role="alert">
+                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -254,9 +258,10 @@
                     (Jonathan Joestar), um ex-jóquei hot-shot que foi prejudicado por uma emboscada e perdeu sua fama e
                     fortuna. Eles correm, junto com outros jóqueis, em uma louca corrida através da América por um
                     prêmio de 50 milhões de dólares, que lembra a The Cannonball Run!</p>
-                <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                <div class="alert alert-danger configAlert" role="alert">
+                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -272,9 +277,10 @@
                     círculos. Ele é feliz como membro no Clube de Estudo de Fenômenos Psíquicos. Apesar de estar no
                     clube apenas por diversão, tudo fica sério quando um espírito de verdade aparece na escola! A vida
                     está prestes a se tornar muito interessante na Escola Sugisawa...</p>
-                <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                <div class="alert alert-danger configAlert" role="alert">
+                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -290,9 +296,10 @@
                     demônio e, a única sobrevivente do incidente foi umas das suas irmãs, que por causa do massacre
                     acaba se transformando em um demônio. Então, o protagonista, Tanjiro, sai em uma jornada para tentar
                     achar uma ''cura'' para a sua irmã...</p>
-                <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                <div class="alert alert-danger configAlert" role="alert">
+                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -312,8 +319,9 @@
                     é extremamente hiperativo, incompreendido e solitário. Naruto sonha em se tornar o Hokage de sua
                     vila, um ninja poderoso e respeitado, para assim poder ser reconhecido por todos.</p>
                 <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
                 </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -329,8 +337,9 @@
                         todos os seus oponentes com apenas um soco, já que isso não lhe traz mais a sensação de
                         adrenalina ao enfrentar um inimigo poderoso...</p>
                     <div class="alert alert-warning configAlert" role="alert">
-                        <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
-                    </div>
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -348,10 +357,10 @@
                     única valquíria os convencem de realizar o Ragnarok, uma batalha mortal entre humanos e deuses para
                     decidir sob sua sobrevivência, 13 humanos enfrentarão 13 deuses. Serão este humanos capazes de
                     colidir com as poderosas divindades?</p>
-                <div class="alert alert-warning configAlert" role="alert">
-                    <i class="bi bi-exclamation-triangle-fill"></i> Não recomendado para menores de 16
+                <div class="alert alert-danger configAlert" role="alert">
+                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
                 </div>
-                <p>Plataformas para ler: MangáLivre</p>
+                <p>Onde ler: MangáLivre</p>
             </div>
         </div>
     </div>
