Favicon adicionada em todas as páginas

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" href="Imagens/Icon_MangaPedia.png" sizes="32x32">
 
     <title>MangaPedia</title>
 
@@ -41,6 +42,11 @@
             width: 220px;
         }
 
+        .tamanhoImgNav {
+            height: 55px;
+            width: 55px;
+        }
+
         .crPadding {
             padding-bottom: 1%;
         }
@@ -52,9 +58,9 @@
     <!--Início navbar-->
     <nav class="navbar navbar-expand-lg bg-primary mb-3">
         <div class="container-fluid">
-            <h3>
-                <i class="bi bi-book-half icones"></i>
-            </h3>
+            <figure>
+                <img src="Imagens/Icon_MangaPedia.png" class="tamanhoImgNav rounded-3">
+            </figure>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
