--- a/romance.html
+++ b/romance.html
@@ -187,7 +187,12 @@
                     suas amigas não fiquem com ciúmes dela. Satisfeita ao viver sua vida dessa maneira, ela reencontra o
                     Tanaka-kun, mas agora ele está sob o nome de Mabuchi Kou. Ele fala pra ela que sentia o mesmo por
                     ela quando eles eram mais jovens, mas que agora as coisas podem nunca mais serem as mesmas. Futaba
-                    será capaz de continuar seu amor, que nem nunca começou há três anos atrás?</p>
+                    será capaz de continuar seu amor, que nem nunca começou há três anos atrás?
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">13</h6></button> Não recomendado para menores de 13
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -201,7 +206,12 @@
                 <p>Fuutarou Uesugi é um estudante pobre e anti-social que um dia conhece a rica estudante transferida
                     Itsuki Nakano. Eles discutem, mas quando Uesugi percebe que ele deve ser o professor particular
                     dela, ele tenta melhorar a sua má primeira impressão. Enquanto tenta fazer isso, ele é atacado por
-                    outras quatro garotas. Quem são essas 5 lindas garotas?</p>
+                    outras quatro garotas. Quem são essas 5 lindas garotas?
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">13</h6></button> Não recomendado para menores de 13
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -216,7 +226,12 @@
                     de seus pais ela cuida de seu irmão mais novo. Miyamura um colega de classe dela , ele é um garoto
                     normal, quatro-olhos e meio estranho mas ele também fora da escola tem um segredo. Quando os dois se
                     encontram inesperadamente, descobrem segredos uns dos outros começam a desenvolver uma amizade
-                    inesperada. Que situações podem esperá-los já que um conheçe o segredo do outro?!</p>
+                    inesperada. Que situações podem esperá-los já que um conheçe o segredo do outro?!
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -231,7 +246,12 @@
                     Shuchi'in, afirmando a sua posição de gênio entre os gênios. Todo o tempo que eles passam juntos
                     ocasionou que eles desenvolvessem sentimentos mútuos, mas o orgulho deles não vai permitir eles se
                     confessarem e se tornarem submissos no relacionamento! Amor é guerra e a batalha deles para fazer o
-                    outro se confessar começa agora!!</p>
+                    outro se confessar começa agora!!
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -244,7 +264,12 @@
                 <h6>309 Capitulos</h6><br>
                 <p>Após tomar um fora Kinoshita Kazuya contrata Mizuhara Chizuru através de um aplicativo chamado
                     Diamond, um aplicativo de namoradas por aluguel. Mas um relação apenas de trabalho acaba em um
-                    encontro surpresa pelos dois estudarem na mesma faculdade.</p>
+                    encontro surpresa pelos dois estudarem na mesma faculdade.
+                </p>
+                <div class="alert alert-danger configAlert" role="alert">
+                    <button type="button" class="btn btn-danger " disabled><h6 class="display-6 fw-bold">16</h6></button> Não recomendado para menores de 16
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -258,7 +283,12 @@
                 <p>Komi-san é uma bela e admirável garota que ninguém consegue tirar os olhos. Quase todos da escola a
                     veem como alguém fora do alcance, mas Tadano Shigeo sabe a verdade: ela apenas não sabe como se
                     comunicar com os outras pessoas.Komi-san, que deseja corrigir este mau hábito dela, tenta melhorar
-                    com a ajuda do Tadano-kun...</p>
+                    com a ajuda do Tadano-kun...
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">13</h6></button> Não recomendado para menores de 13
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -271,7 +301,12 @@
                 <h6>161 Capitulos</h6><br>
                 <p>Nagatoro é uma menina de primeiro ano na escola que adora fazer bullying com seu Senpai. Mas ele
                     aceita isso, mesmo depois de ter passado por todos os tipos de situações humilhantes e embaraçosas,
-                    porque ele está apaixonado por ela.</p>
+                    porque ele está apaixonado por ela.
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -289,7 +324,12 @@
                     mudar quando ele se depara com Hiyori Iki e salva sua vida, um feito que também deixa em muito a
                     situação para que ela está presa com ele até que seu problema é resolvido. Juntamente com Hiyori e
                     sua nova Yukine parceiro de armas, Yato vai fazer tudo que puder para ganhar fama, reconhecimento e
-                    apenas talvez, um santuário dedicado a ele, também...</p>
+                    apenas talvez, um santuário dedicado a ele, também...
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -301,7 +341,12 @@
                 <h4 class="text-left">Uzaki-Chan<br>
                     <h6>125 Capitulos</h6><br>
                     <p>A vida diária de um quieto universitário que só quer ficar sozinho, que começou a ser zombado
-                        pela sua Kouhai "Fofa! Mas irritante!"</p>
+                        pela sua Kouhai "Fofa! Mas irritante!"
+                    </p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">14</h6></button> Não recomendado para menores de 14
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
             <hr class="linha">
         </div>
@@ -317,9 +362,13 @@
                     eles descobriam que ela é uma otaku, e quando ela descobre que seu amigo de infância e também otaku,
                     Hirotaka Nifuji, trabalha na mesma empresa que ela, ela vê seu segredo ameaçado. Assim, ela traça um
                     plano para manter as aparências, mas Hirotaka apenas faz uma contra-proposta: Por que nós não
-                    namoramos?!</p>
+                    namoramos?!
+                </p>
+                <div class="alert alert-warning configAlert" role="alert">
+                    <button type="button" class="btn btn-warning " disabled><h6 class="display-6 fw-bold">13</h6></button> Não recomendado para menores de 13
+                </div>
+                <p>Onde ler: MangáLivre</p>
             </div>
-            <hr class="linha">
         </div>
     </div>
     <!-- Fim container mangás-->
