--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -86,7 +86,7 @@
                         </ul>
                     </li>
                     <li class="nav-item rounded-3 me-3 navButtons">
-                        <a class="nav-link" aria-current="page" href="contato.html">
+                        <a class="nav-link" aria-current="page" href="cadastro.html">
                             <i class="bi bi-send-fill icones"></i>
                             Cadastro
                         </a>
