pagination adicionado, cadastro modificado

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -226,8 +226,8 @@
             </div>
 
             <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
-                <a href="acao.html#snv" class="text-center p-1">
-                    <img src="Imagens/acao/snv.jpg" class="tamanhoImg card-img">
+                <a href="acao.html#snw" class="text-center p-1">
+                    <img src="Imagens/acao/snw.jpg" class="tamanhoImg card-img">
                 </a>
                 <div class="card-body">
                     <p class="card-text text-center">Shuumatsu no Walkyrie</p>
