--- a/esporte.html
+++ b/esporte.html
@@ -15,7 +15,7 @@
 
     <style type="text/css">
         body {
-            background-image: url("Imagens/bgBodyMangaPedia.jpg");
+            background-image: url("Imagens/imgEsporte.jpg");
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
